--- a/index.html
+++ b/index.html
@@ -3,14 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Formulas</title>
-    <!-- Step 2: Include MathJax -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.0/es5/tex-mml-chtml.js" integrity="sha384-rXyPQvBRtPPTa+G2eO2UvJGz5Dj3tAdUd3W/S5sevvU6GWmF1FhFJkY2dM2rO8Qn" crossorigin="anonymous"></script>
+    <title>Your Book Title</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: auto;
+            padding: 20px;
+        }
+        nav ul {
+            padding: 0;
+            list-style-type: none;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        nav ul li {
+            display: inline;
+            margin: 0 10px;
+        }
+        nav ul li a {
+            text-decoration: none;
+            color: #007BFF;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        .chapter {
+            margin-bottom: 40px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Math Formulas</h1>
-    <!-- Step 3: Display Math Formulas -->
-    <p>This is an example of an inline formula: \(x^2 + y^2 = z^2\)</p>
-    <p>This is a displayed formula: $$\int_{a}^{b} x^2 dx$$</p>
+
+<header>
+    <h1>Your Book Title</h1>
+    <nav>
+        <ul>
+            <li><a href="#chapter1">Chapter 1</a></li>
+            <li><a href="#chapter2">Chapter 2</a></li>
+            <li><a href="#chapter3">Chapter 3</a></li>
+            <!-- Add more chapters as needed -->
+        </ul>
+    </nav>
+</header>
+
+<main>
+    <section id="chapter1" class="chapter">
+        <h2>Chapter 1: Introduction</h2>
+        <p>This is the content of Chapter 1.</p>
+        <!-- Add more content here -->
+    </section>
+
+    <section id="chapter2" class="chapter">
+        <h2>Chapter 2: Topic</h2>
+        <p>This is the content of Chapter 2.</p>
+        <!-- Add more content here -->
+    </section>
+
+    <section id="chapter3" class="chapter">
+        <h2>Chapter 3: Conclusion</h2>
+        <p>This is the content of Chapter 3.</p>
+        <!-- Add more content here -->
+    </section>
+
+    <!-- Add more chapters as needed -->
+</main>
+
+<footer>
+    <p>Your Book Author</p>
+</footer>
+
 </body>
 </html>
