--- a/index.html
+++ b/index.html
@@ -36,27 +36,19 @@
 <body>
 
 <header>
-    <h1>Your Book Title</h1>
-    <nav>
-        <ul>
-            <li><a href="#chapter1">Chapter 1</a></li>
-            <li><a href="#chapter2">Chapter 2</a></li>
-            <li><a href="#chapter3">Chapter 3</a></li>
-            <!-- Add more chapters as needed -->
-        </ul>
-    </nav>
+    <h1>Summary</h1>
 </header>
 
 <main>
     <section id="chapter1" class="chapter">
-        <h2>Chapter 1: Introduction</h2>
+        <h2><a href="math_stat">Math Stat</a></h2>
         <p>This is the content of Chapter 1.</p>
         <!-- Add more content here -->
     </section>
 
-    <section id="chapter2" class="chapter">
-        <h2>Chapter 2: Topic</h2>
-        <p>This is the content of Chapter 2.</p>
+    <section id="chapter1" class="chapter">
+        <h2><a href="the_stat/index.html">The stat</a></h2>
+        <p>This is the content of Chapter 1.</p>
         <!-- Add more content here -->
     </section>
 
