--- a/math_stat/index.html
+++ b/math_stat/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Statistics</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- <style>
+    <title>Math Statistics</title>
+    <style>
         body {
             font-family: Arial, sans-serif;
             max-width: 800px;
@@ -32,12 +31,12 @@
         .chapter {
             margin-bottom: 40px;
         }
-    </style> -->
+    </style>
 </head>
 <body>
 
 <header>
-    <h1>Summary</h1>
+    <h1>Math Statistics</h1>
 </header>
 
 <main>
