--- a/index.html
+++ b/index.html
@@ -5,34 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Statistics</title>
     <link rel="stylesheet" href="style.css">
-    <!-- <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: auto;
-            padding: 20px;
-        }
-        nav ul {
-            padding: 0;
-            list-style-type: none;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        nav ul li {
-            display: inline;
-            margin: 0 10px;
-        }
-        nav ul li a {
-            text-decoration: none;
-            color: #007BFF;
-        }
-        h1, h2 {
-            color: #333;
-        }
-        .chapter {
-            margin-bottom: 40px;
-        }
-    </style> -->
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
 
@@ -43,27 +17,16 @@
 <main>
     <section id="chapter1" class="chapter">
         <h2><a href="math_stat/index.html">Math Statistics</a></h2>
-        <p>This is the content of Chapter 1.</p>
-        <!-- Add more content here -->
     </section>
 
     <section id="chapter1" class="chapter">
         <h2><a href="the_stat/index.html">Theoretical Statistics</a></h2>
-        <p>This is the content of Chapter 1.</p>
-        <!-- Add more content here -->
     </section>
 
-    <section id="chapter3" class="chapter">
-        <h2>Chapter 3: Conclusion</h2>
-        <p>This is the content of Chapter 3.</p>
-        <!-- Add more content here -->
-    </section>
-
-    <!-- Add more chapters as needed -->
 </main>
 
 <footer>
-    <p>Your Book Author</p>
+    <p>Email: shijie2024@outlook</p>
 </footer>
 
 </body>
