--- a/the_stat/index.html
+++ b/the_stat/index.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Statistics</title>
-    <link rel="stylesheet" href="../style.css">
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <title>Statistics</title>
+    <link rel="stylesheet" href="style.css">
     <!-- <style>
         body {
             font-family: Arial, sans-serif;
@@ -39,13 +37,21 @@
 <body>
 
 <header>
-    <h1>Math Statistics</h1>
+    <h1>Summary</h1>
 </header>
 
 <main>
-    <h1>Math Formulas</h1>
-    <p>This is an example of an inline formula: \(x^2 + y^2 = z^2\)</p>
-    <p>This is a displayed formula: $$\int_{a}^{b} x^2 dx$$</p>
+    <section id="chapter1" class="chapter">
+        <h2><a href="math_stat/index.html">Math Statistics</a></h2>
+        <p>This is the content of Chapter 1.</p>
+        <!-- Add more content here -->
+    </section>
+
+    <section id="chapter1" class="chapter">
+        <h2><a href="the_stat/index.html">Theoretical Statistics</a></h2>
+        <p>This is the content of Chapter 1.</p>
+        <!-- Add more content here -->
+    </section>
 
     <section id="chapter3" class="chapter">
         <h2>Chapter 3: Conclusion</h2>
@@ -56,7 +62,9 @@
     <!-- Add more chapters as needed -->
 </main>
 
-
+<footer>
+    <p>Your Book Author</p>
+</footer>
 
 </body>
 </html>
