--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <main>
     <section id="chapter1" class="chapter">
-        <h2><a href="math_stat/index.html">Math Statistics</a></h2>
+        <h2><a href="math_stat/index.html">Mathematical Statistics</a></h2>
     </section>
 
     <section id="chapter1" class="chapter">
@@ -26,7 +26,7 @@
 </main>
 
 <footer>
-    <p>Email: shijie2024@outlook</p>
+    <p>Email: shijie2024@outlook.com</p>
 </footer>
 
 </body>
