--- a/math_stat/index.html
+++ b/math_stat/index.html
@@ -7,43 +7,16 @@
     <link rel="stylesheet" href="../style.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    <!-- <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: auto;
-            padding: 20px;
-        }
-        nav ul {
-            padding: 0;
-            list-style-type: none;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        nav ul li {
-            display: inline;
-            margin: 0 10px;
-        }
-        nav ul li a {
-            text-decoration: none;
-            color: #007BFF;
-        }
-        h1, h2 {
-            color: #333;
-        }
-        .chapter {
-            margin-bottom: 40px;
-        }
-    </style> -->
 </head>
 <body>
 
 <header>
-    <h1>Math Statistics</h1>
+    <h1>Mathematical Statistics</h1>
 </header>
 
 <main>
-    <h1>Math Formulas</h1>
+    <h1>Likelihood</h1>
+    <p>Consider \(X_i, i = 1, \cdots, N\), follow a distribution with PDF f(x | \mid \theta)</p>
     <p>This is an example of an inline formula: \(x^2 + y^2 = z^2\)</p>
     <p>This is a displayed formula: $$\int_{a}^{b} x^2 dx$$</p>
 
