--- a/math_stat/index.html
+++ b/math_stat/index.html
@@ -16,7 +16,9 @@
 
 <main>
     <h1>Likelihood</h1>
-    <p>Consider \(X_i, i = 1, \cdots, N\), follow a distribution with PDF \(f(x | \mid \theta)\). Hence, the likelihood function is \(L(\theta) = \prod_{i=1}^N f(x_i \mid \theta)\).</p>
+    <p>Consider \(X_i, i = 1, \cdots, N\), follow a distribution with PDF \(f(x \mid \theta)\). 
+        Hence, the likelihood function is \(L(\theta) = \prod_{i=1}^N f(x_i \mid \theta)\).
+        The score function \(s(\theta) = \frac{\partial}{\partial\theta}\logL(\theta)\).</p>
     <p>This is an example of an inline formula: \(x^2 + y^2 = z^2\)</p>
     <p>This is a displayed formula: $$\int_{a}^{b} x^2 dx$$</p>
 
