--- a/math_stat/index.html
+++ b/math_stat/index.html
@@ -18,8 +18,8 @@
     <h1>Likelihood</h1>
     <p>Consider \(X_i, i = 1, \cdots, N\), follow a distribution with PDF \(f(x \mid \theta)\). 
         Hence, the likelihood function is \(L(\theta) = \prod_{i=1}^N f(x_i \mid \theta)\).
-        The score function \(s(\theta) = \frac{\partial}{\partial\theta}\logL(\theta)\).</p>
-    <p>This is an example of an inline formula: \(x^2 + y^2 = z^2\)</p>
+        The score function \(s(\theta) = \frac{\partial}{\partial\theta}\log L(\theta)\).</p>
+    <p>Let \(\theta_0\) denote the true value of \(\theta\). We have $$s(\theta_0) \sim N(0,I(\theta_0)),$$ where \(I(\cdot)\) represents the Fisher Information. </p>
     <p>This is a displayed formula: $$\int_{a}^{b} x^2 dx$$</p>
 
     <section id="chapter3" class="chapter">
