--- a/index.html
+++ b/index.html
@@ -1,33 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Statistics</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<meta charset="UTF-8">
+<title>Shijie Yuan | Research Website</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+<style>
+body { font-family: Arial, sans-serif; max-width: 900px; margin: auto; padding: 20px; }
+h1, h2 { color: #003366; }
+.section { margin-bottom: 40px; }
+.nav a { margin-right: 15px; color: #003366; text-decoration: none; font-weight: bold; }
+</style>
 </head>
+
 <body>
 
-<header>
-    <h1>Summary</h1>
-</header>
+<div class="nav">
+  <a href="#home">Home</a>
+  <a href="#about">About</a>
+  <a href="#research">Research</a>
+  <a href="#pubs">Publications</a>
+  <a href="#projects">Projects</a>
+  <a href="#cv">CV</a>
+  <a href="#contact">Contact</a>
+</div>
 
-<main>
-    <section id="chapter1" class="chapter">
-        <h2><a href="math_stat/index.html">Mathematical Statistics</a></h2>
-    </section>
+<div id="home" class="section">
+  <h1>Shijie (Yun) Yuan</h1>
+  <p>PhD Student in Statistics · University of Texas at Austin</p>
+  <p>Bayesian Nonparametrics · Biomarker Threshold · Psychometrics · GLM</p>
+</div>
 
-    <section id="chapter1" class="chapter">
-        <h2><a href="the_stat/index.html">Theoretical Statistics</a></h2>
-    </section>
+<div id="about" class="section">
+  <h2>About Me</h2>
+  <p>I am a PhD student in Statistics at UT Austin. My research spans Bayesian nonparametrics,
+     biomarker threshold estimation, psychometrics, and generalized linear models.</p>
+</div>
 
-</main>
+<div id="research" class="section">
+  <h2>Research Interests</h2>
+  <ul>
+    <li>Bayesian Nonparametrics (DP/NRM, copulas)</li>
+    <li>Biomarker Threshold & Clinical Trial Design</li>
+    <li>Psychometrics / IRT / CFA</li>
+    <li>Generalized Linear Models & Quasi-likelihood</li>
+  </ul>
+</div>
 
-<footer>
-    <p>Email: shijie2024@outlook.com</p>
-</footer>
+<div id="pubs" class="section">
+  <h2>Publications</h2>
+  <p><strong>Manuscripts</strong></p>
+  <ul>
+    <li>Yuan, S., Müller, P., Rathouz, P. Dirichlet Process GLMs with Copula Extensions. (2025)</li>
+    <li>Yuan, S., Choi, S. Strategic Mindset and Meta-Strategy Use. (2025)</li>
+  </ul>
+</div>
+
+<div id="projects" class="section">
+  <h2>Projects</h2>
+  <h3>SIMBA: Bayesian Biomarker Threshold Estimation</h3>
+  <p>Developed MCMC simulation framework and utility-based threshold selection.</p>
+
+  <h3>DPGLM with Copula</h3>
+  <p>Implemented hierarchical BNP model with copula-augmented likelihood.</p>
+</div>
+
+<div id="cv" class="section">
+  <h2>CV</h2>
+  <p><a href="cv.pdf" target="_blank">Download my CV</a></p>
+</div>
+
+<div id="contact" class="section">
+  <h2>Contact</h2>
+  <p>Email: yourname@utexas.edu</p>
+  <p>GitHub · Google Scholar · LinkedIn</p>
+</div>
 
 </body>
 </html>
