--- a/index.html
+++ b/index.html
@@ -1,79 +1,194 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<title>Shijie Yuan | Research Website</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-<style>
-body { font-family: Arial, sans-serif; max-width: 900px; margin: auto; padding: 20px; }
-h1, h2 { color: #003366; }
-.section { margin-bottom: 40px; }
-.nav a { margin-right: 15px; color: #003366; text-decoration: none; font-weight: bold; }
-</style>
+  <meta charset="UTF-8">
+  <title>Shijie Yuan | Research Website</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.9.4/css/academicons.min.css">
+
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<div class="nav">
-  <a href="#home">Home</a>
-  <a href="#about">About</a>
-  <a href="#research">Research</a>
-  <a href="#pubs">Publications</a>
-  <a href="#projects">Projects</a>
-  <a href="#cv">CV</a>
-  <a href="#contact">Contact</a>
+  <div class="nav">
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#news">News</a>
+    <a href="#pubs">Publications</a>
+    <!-- <a href="#projects">Projects</a> -->
+    <!-- <a href="#cv">CV</a> -->
+    <a href="#contact">Contact</a>
+  </div>
+
+  <div id="home" class="section">
+    <h1>Shijie (Jay) Yuan</h1>
+    <p>PhD Candidate in Statistics · University of Texas at Austin</p>
+    <p>Bayesian Nonparametrics · Clinical Trial Design · Generalized Linear Models</p>
+  </div>
+
+  <div id="about" class="section">
+    <h2>About Me</h2>
+    <p class="about-text">I am a Ph.D. student in Statistics at The University of Texas at Austin, where my research
+      spans Bayesian nonparametrics,
+      clinical trial design, and generalized linear models. I am co-advised by
+      <a href="https://dellmed.utexas.edu/directory/paul-rathouz" target="_blank">Dr. Paul Rathouz</a> and
+      <a href="https://math.utexas.edu/directory/peter-mueller" target="_blank">Dr. Peter Müller</a>
+      Before joining UT, I worked with
+      <a href="https://pbhs.uchicago.edu/faculty/yuan-ji-phd" target="_blank">Dr. Yuan Ji</a> on innovative Bayesian
+      trial designs.
+      I earned my bachelor’s degree in Statistics from Beijing Normal University.
+    </p>
+  </div>
+
+
+<div id="news" class="section">
+  <h2>News</h2>
+
+  <div class="timeline">
+
+    <div class="timeline-item">
+      <div class="timeline-date">May 21, 2025</div>
+      <div class="timeline-content">
+        Invited to give a talk at the
+        <a href="https://mbswonline.com/2025-program/" target="_blank">2025 MBSW Workshop</a>:
+        <em>“Subgroup Identification in Basket Trials: From Threshold Estimation to Bayesian Decision Making”</em>
+        (Day 3 – Clinical 3 Session).
+      </div>
+    </div>
+
+    <div class="timeline-item">
+      <div class="timeline-date">March 25, 2025</div>
+      <div class="timeline-content">
+        Co-instructor for the 
+        <a href="https://www.enar.org/meetings/spring2025/profdev/tutorials.cfm" target="_blank">
+          ENAR 2025 Educational Program Tutorial
+        </a>:
+        <em>“Novel and Easy-to-implement Power and Sample Size Calculations for Generalized Linear Models”</em>,
+        with Paul Rathouz (UT Austin) and Amy Cochran (UW–Madison).
+      </div>
+    </div>
+
+  </div>
 </div>
 
-<div id="home" class="section">
-  <h1>Shijie (Yun) Yuan</h1>
-  <p>PhD Student in Statistics · University of Texas at Austin</p>
-  <p>Bayesian Nonparametrics · Biomarker Threshold · Psychometrics · GLM</p>
-</div>
+  <div id="pubs" class="section">
+    <h2>Selected Publications</h2>
 
-<div id="about" class="section">
-  <h2>About Me</h2>
-  <p>I am a PhD student in Statistics at UT Austin. My research spans Bayesian nonparametrics,
-     biomarker threshold estimation, psychometrics, and generalized linear models.</p>
-</div>
+    <div id="pub-container">
 
-<div id="research" class="section">
-  <h2>Research Interests</h2>
-  <ul>
-    <li>Bayesian Nonparametrics (DP/NRM, copulas)</li>
-    <li>Biomarker Threshold & Clinical Trial Design</li>
-    <li>Psychometrics / IRT / CFA</li>
-    <li>Generalized Linear Models & Quasi-likelihood</li>
-  </ul>
-</div>
+      <!-- 单篇论文模板：只需要填写年份、标题、作者、期刊 -->
+      <a href="https://arxiv.org/abs/2509.07267" target="_blank" class="pub-link-wrapper">
+        <div class="pub-card" data-year="2025">
+          <div class="pub-content">
+            <p class="pub-title">
+              Monitoring Adverse Events Through Bayesian Nonparametric Clustering Across Studies.
+            </p>
+            <p class="pub-authors"><strong>Yuan, S.</strong>, Müller, P., et al.</p>
+            <p class="pub-journal">arXiv:2509.07267, 2025</p>
+          </div>
+        </div>
+      </a>
 
-<div id="pubs" class="section">
-  <h2>Publications</h2>
-  <p><strong>Manuscripts</strong></p>
-  <ul>
-    <li>Yuan, S., Müller, P., Rathouz, P. Dirichlet Process GLMs with Copula Extensions. (2025)</li>
-    <li>Yuan, S., Choi, S. Strategic Mindset and Meta-Strategy Use. (2025)</li>
-  </ul>
-</div>
 
-<div id="projects" class="section">
-  <h2>Projects</h2>
-  <h3>SIMBA: Bayesian Biomarker Threshold Estimation</h3>
-  <p>Developed MCMC simulation framework and utility-based threshold selection.</p>
+      <a href="https://arxiv.org/abs/2505.13202" target="_blank" class="pub-link-wrapper">
+        <div class="pub-card" data-year="2025">
+          <div class="pub-content">
+            <p class="pub-title">
+              SIMBA—A Bayesian Decision Framework for Identifying Optimal Biomarker Subgroups for Cancer Basket Trials.
+            </p>
+            <p class="pub-authors"><strong>Yuan, S.</strong>, Müller, P., et al.</p>
+            <p class="pub-journal">arXiv:2505.13202, 2025</p>
 
-  <h3>DPGLM with Copula</h3>
-  <p>Implemented hierarchical BNP model with copula-augmented likelihood.</p>
-</div>
+          </div>
+        </div>
+      </a>
 
-<div id="cv" class="section">
-  <h2>CV</h2>
-  <p><a href="cv.pdf" target="_blank">Download my CV</a></p>
-</div>
+      <a href="https://doi.org/10.1080/10543406.2024.2364716" target="_blank" class="pub-link-wrapper">
+        <div class="pub-card" data-year="2024">
+          <div class="pub-content">
+            <p class="pub-title">
+              Pharmacometrics-Enabled DOse OPtimization (PEDOOP) for Seamless Phase I–II Trials in Oncology.
+            </p>
+            <p class="pub-authors"><strong>Yuan, S.</strong>, Ji, Y., et al.</p>
+            <p class="pub-journal">Journal of Biopharmaceutical Statistics, 2024</p>
 
-<div id="contact" class="section">
-  <h2>Contact</h2>
-  <p>Email: yourname@utexas.edu</p>
-  <p>GitHub · Google Scholar · LinkedIn</p>
-</div>
+          </div>
+        </div>
+      </a>
+
+      <a href="https://doi.org/10.51387/24-NEJSDS61" target="_blank" class="pub-link-wrapper">
+        <div class="pub-card" data-year="2024">
+          <div class="pub-content">
+            <p class="pub-title">
+              The Backfill i3+3 Design for Dose-Finding Trials in Oncology.
+            </p>
+            <p class="pub-authors">Liu, J., <strong>Yuan, S.</strong>, Ji, Y., et al.</p>
+            <p class="pub-journal">The New England Journal of Statistics in Data Science, 2024</p>
+
+          </div>
+        </div>
+      </a>
+
+      <a href="https://doi.org/10.1093/jrsssc/qlad025" target="_blank" class="pub-link-wrapper">
+        <div class="pub-card" data-year="2023">
+          <div class="pub-content">
+            <p class="pub-title">
+              MUCE: Bayesian Hierarchical Modelling for Phase 1b Multiple Expansion Cohort Trials.
+            </p>
+            <p class="pub-authors">Lyu, J., <strong>Yuan, S.</strong>, Ji, Y., et al.</p>
+            <p class="pub-journal">JRSS Series C, 2023</p>
+          </div>
+        </div>
+    </div>
+    </a>
+
+  </div>
+  </div>
+
+
+
+
+
+  <div id="contact" class="section">
+    <div class="contact-icons">
+      <a href="mailto:sj.yuan@austin.utexas.edu" target="_blank" aria-label="Email">
+        <i class="fa-solid fa-envelope"></i>
+      </a>
+      <a href="https://github.com/SJ-24" target="_blank" aria-label="GitHub">
+        <i class="fab fa-github"></i>
+      </a>
+      <a href="https://scholar.google.com/citations?user=Ce-G948AAAAJ" target="_blank" aria-label="Google Scholar">
+        <i class="ai ai-google-scholar"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/shijie-yuan/" target="_blank" aria-label="LinkedIn">
+        <i class="fab fa-linkedin"></i>
+      </a>
+    </div>
+    <!-- <p class="contact-email">sj.yuan@austin.utexas.edu</p> -->
+  </div>
+
+
+  <div class="site-footer">
+
+    <div class="footer-divider" style="margin-bottom:20px;"></div>
+
+    <p class="footer-quote">
+      “Heaven and earth will pass away, but my words will not pass away.” — Mark 13:31
+    </p>
+
+    <p class="footer-quote-cn">
+      “天地要废去，我的话却不能废去。” —— 马可福音 13:31
+    </p>
+
+    <div class="footer-divider" style="margin-top:20px;"></div>
+
+  </div>
+
+
 
 </body>
+
 </html>
