--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@
     <a href="#contact">Contact</a>
   </div>
 
-  <div id="home" class="section">
+<div id="home" class="section home-with-photo">
+  <div class="home-text">
     <h1>Shijie (Jay) Yuan</h1>
     <p>PhD Candidate in Statistics · University of Texas at Austin</p>
     <p>Bayesian Nonparametrics · Clinical Trial Design · Generalized Linear Models</p>
   </div>
+
+  <img src="img/profile-converted.jpg" class="profile-photo" alt="Shijie Yuan">
+</div>
+
 
   <div id="about" class="section">
     <h2>About Me</h2>
